--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -4,7 +4,7 @@
 
 @import "/src/styles/common/index";
 
-@font-face {
-  font-family: 'MochiyPopOne';
-  src: local('MochiyPopOne'), url('/src/fonts/MochiyPopOne.ttf') format('ttf');
-}
+//@font-face {
+//  font-family: 'MochiyPopOne';
+//  src: local('MochiyPopOne'), url('/src/fonts/MochiyPopOne.ttf') format('ttf');
+//}
