--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -7,3 +7,23 @@ body {
   color: transparent;
 }
 
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 2px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #A500006B;
+  border-radius: 2px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(165, 0, 0, 0.63);
+}
