--- a/src/styles/animation/index.scss
+++ b/src/styles/animation/index.scss
@@ -7,7 +7,11 @@
   40% {
     transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
     animation-timing-function: ease-in;
-  }
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    -moz-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    -ms-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    -o-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+}
 
   60% {
     transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
