--- a/src/styles/common/border.scss
+++ b/src/styles/common/border.scss
@@ -8,7 +8,7 @@
 }
 
 .border-image-orange {
-  @include border-gradient(2px, '/assets/rect/btn-gold.svg', 1, stretch);
+  @include border-gradient(2px, '/assets/rect/btn-gold-avt.svg', 1, stretch);
 }
 
 .border-input-chat {
